#396 Renamed note to connection in demo bundle

--- a/Acme/DemoBundle/Resources/config/hateoas/Model.Connection.yml
+++ b/Acme/DemoBundle/Resources/config/hateoas/Model.Connection.yml
@@ -1,7 +1,7 @@
-Acme\DemoBundle\Model\Note:
+Acme\DemoBundle\Model\Connection:
   relations:
     self:
       rel: self
       href:
-        route: get_note
+        route: get_connection
         parameters: {"id": ".id"}
