--- a/Acme/DemoBundle/Resources/config/serializer/Model.Connection.yml
+++ b/Acme/DemoBundle/Resources/config/serializer/Model.Connection.yml
@@ -1,6 +1,6 @@
-Acme\DemoBundle\Model\Note:
+Acme\DemoBundle\Model\Connection:
   exclusion_policy: ALL
-  xml_root_name: note
+  xml_root_name: connection
   properties:
     message:
       expose: true
