#396 Fixed editing a connection

--- a/Janus/ConnectionsBundle/Resources/config/validation.yml
+++ b/Janus/ConnectionsBundle/Resources/config/validation.yml
@@ -1,5 +1,4 @@
-// @todo
-\sspmod_janus_Model_Connection:
+\sspmod_janus_Model_Connection_Revision_Dto:
     properties:
-        message:
+        name:
             - NotBlank: ~
