#396 Shipped config is now used for testing to make output predictable

--- a/Janus/SSPIntegrationBundle/Resources/config/services.yml
+++ b/Janus/SSPIntegrationBundle/Resources/config/services.yml
@@ -1,6 +1,7 @@
 services:
   janus_config_factory:
     class: Janus\SSPIntegrationBundle\DependencyInjection\SSPConfigFactory
+    arguments:    ["%kernel.environment%"]
 
   janus_config:
     class: SimpleSAML_Configuration
