#396 Fixed symfony session errors by making instation of SSP session lazy

--- a/Janus/SSPIntegrationBundle/Resources/config/services.yml
+++ b/Janus/SSPIntegrationBundle/Resources/config/services.yml
@@ -12,6 +12,7 @@ services:
     class: SimpleSAML_Session
     factory_class: SimpleSAML_Session
     factory_method: getInstance
+    lazy: true
 
   authentication_provider:
     class: Janus\SSPIntegrationBundle\DependencyInjection\AuthenticationProvider
